# elsegate

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  INSTALLATION.md  README.md  pyproject.toml
.github/workflows/: test.yml
docs/: configuration.md  docker.md  foss-review.md  systemd.md  tailscale-ssh.md
elsegate/: __init__.py  config.py  router.py  server.py
elsegate/backends/: __init__.py  claude_code.py  ollama_passthru.py  openai_compat.py
examples/: elsegate.yaml
tests/: test_backends.py  test_config.py
